tests/compile_fail/borrow/unknown_field_attr_arg.rs
#[derive(derive_more::Borrow)]
struct Foo {
    #[borrow(baz)]
    bar: i32,
}

fn main() {}
